profile api route added

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MONGO_URI = mongodb+srv://admin:admin123@cluster0.jdzdjqt.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://admin:admin123@cluster0.jdzdjqt.mongodb.net/social_network?retryWrites=true&w=majority
+jwt_Secrect  = mysecreatToken
+Github_Client_ID = fdd0d9c10ec2f5bbddbb
+Github_Client_secreat = 899e1de9d9a5cdecb02876b1dda4ead53e432ed7
